--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -6,3 +6,47 @@
   year={2015},
   organization={IEEE}
 }
+
+@misc{esper,
+  author={Benjamin Moran},
+  title={Esper},
+  year={2020},
+  month={05},
+  publisher={GitHub},
+  journal={GitHub repository},
+  howpublished={\url{https://github.com/benmoran56/esper/commit/850ee6365dcdc6c36c7b02053bef121a98042849}},
+  commit={850ee6365dcdc6c36c7b02053bef121a98042849},
+  version={Maduin (1.3)},
+}
+
+@misc{simpy,
+  author={ Ontje Lünsdorf and Stefan Scherfke},
+  title={SimPy},
+  year={2020},
+  month={04},
+  publisher={GitLab},
+  journal={GitLab repository},
+  howpublished={\url{https://gitlab.com/team-simpy/simpy/-/commit/b29e72af9975aae6cc0f2ffeaff0c5c876c9e644}},
+  commit={b29e72af9975aae6cc0f2ffeaff0c5c876c9e644},
+  version={4.0.1},
+}
+
+@article{belanger2010aboutsimulation,
+  title={The what, where and why of real-time simulation},
+  author={B{\'e}langer, Jean and Venne, P and Paquin, Jean-Nicolas},
+  journal={Planet Rt},
+  volume={1},
+  number={1},
+  pages={25--29},
+  year={2010}
+}
+
+@article{matloff2008desintro,
+  title={Introduction to discrete-event simulation and the simpy language},
+  author={Matloff, Norm},
+  journal={Davis, CA. Dept of Computer Science. University of California at Davis. Retrieved on August},
+  volume={2},
+  number={2009},
+  pages={1--33},
+  year={2008}
+}
