First version chap. 2

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -50,3 +50,58 @@
   pages={1--33},
   year={2008}
 }
+
+@inproceedings{koenig2004gazebo,
+  title={Design and use paradigms for gazebo, an open-source multi-robot simulator},
+  author={Koenig, Nathan and Howard, Andrew},
+  booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)(IEEE Cat. No. 04CH37566)},
+  volume={3},
+  pages={2149--2154},
+  year={2004},
+  organization={IEEE}
+}
+
+@inproceedings{hugues2006simbad,
+  title={Simbad: an autonomous robot simulation package for education and research},
+  author={Hugues, Louis and Bredeche, Nicolas},
+  booktitle={International Conference on Simulation of Adaptive Behavior},
+  pages={831--842},
+  year={2006},
+  organization={Springer}
+}
+
+@inproceedings{rohmer2013coopeliasim,
+  title={V-REP: A versatile and scalable robot simulation framework},
+  author={Rohmer, Eric and Singh, Surya PN and Freese, Marc},
+  booktitle={2013 IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  pages={1321--1326},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{echeverria2011morse,
+  title={Modular open robots simulation engine: Morse},
+  author={Echeverria, Gilberto and Lassabe, Nicolas and Degroote, Arnaud and Lemaignan, S{\'e}verin},
+  booktitle={2011 IEEE International Conference on Robotics and Automation},
+  pages={46--51},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{maia2019dragonfly,
+  title={Dragonfly: a tool for simulating self-adaptive drone behaviours},
+  author={Maia, Paulo Henrique and Vieira, Lucas and Chagas, Matheus and Yu, Yijun and Zisman, Andrea and Nuseibeh, Bashar},
+  booktitle={2019 IEEE/ACM 14th International Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)},
+  pages={107--113},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{noori20173d,
+  title={On 3D simulators for multi-robot systems in ROS: MORSE or Gazebo?},
+  author={Noori, Farzan M and Portugal, David and Rocha, Rui P and Couceiro, Micael S},
+  booktitle={2017 IEEE International Symposium on Safety, Security and Rescue Robotics (SSRR)},
+  pages={19--24},
+  year={2017},
+  organization={IEEE}
+}
