--- a/monografia.tex
+++ b/monografia.tex
@@ -10,8 +10,12 @@
 \documentclass[bacharelado]{UnB-CIC}%
 
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
+\usepackage{multirow}
+\usepackage{colortbl}
+\usepackage{booktabs}  
 
-
+\newcommand\Tstrut{\rule{0pt}{3ex}}         % = `top' strut
+\newcommand\Bstrut{\rule[-1.2ex]{0pt}{0pt}}   % = `bottom' strut
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
