introduction 1st version

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -105,3 +105,39 @@
   year={2017},
   organization={IEEE}
 }
+
+@incollection{cao1997cooperative,
+  title={Cooperative mobile robotics: Antecedents and directions},
+  author={Cao, Y Uny and Kahng, Andrew B and Fukunaga, Alex S},
+  booktitle={Robot colonies},
+  pages={7--27},
+  year={1997},
+  publisher={Springer}
+}
+
+@inproceedings{iocchi2000reactivity,
+  title={Reactivity and deliberation: a survey on multi-robot systems},
+  author={Iocchi, Luca and Nardi, Daniele and Salerno, Massimiliano},
+  booktitle={Workshop on Balancing Reactivity and Social Deliberation in Multi-Agent Systems},
+  pages={9--32},
+  year={2000},
+  organization={Springer}
+}
+
+@phdthesis{sykes2010autonomous,
+  title={Autonomous architectural assembly and adaptation},
+  author={Sykes, Daniel},
+  year={2010},
+  school={Citeseer}
+}
+
+@article{pinciroli2012argos,
+  title={ARGoS: a modular, parallel, multi-engine simulator for multi-robot systems},
+  author={Pinciroli, Carlo and Trianni, Vito and O’Grady, Rehan and Pini, Giovanni and Brutschy, Arne and Brambilla, Manuele and Mathews, Nithin and Ferrante, Eliseo and Di Caro, Gianni and Ducatelle, Frederick and others},
+  journal={Swarm intelligence},
+  volume={6},
+  number={4},
+  pages={271--295},
+  year={2012},
+  publisher={Springer}
+}
